# slicesimd

./: Cargo.toml  Makefile
benches/: reduce_add.rs
slicesimd_proc/: Cargo.toml
slicesimd_proc/src/: lib.rs
src/: lib.rs  naive.rs  utils.rs  x86.rs
src/horizontal/: mod.rs  naive.rs
src/horizontal/x86/: float.rs
src/vertical/: mod.rs  naive.rs  x86.rs
src/x86/: float.rs  mod.rs
