[package]
name = "slicesimd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std"]
std = ["alloc"]
alloc = []
naive = []

[dependencies]
bitflags = "1.3.2"
bytemuck = "1.13.0"
cfg-if = "1.0.0"
concat-idents = "1.1.4"
docfg = "0.1.0"
static_assertions = "1.1.0"

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"
rayon = "1.6.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "reduce_add"
harness = false
